--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@ title: Portfólio | Luís Dalmolin
 * Resyarte (quando entrar no ar)
 -->
 <div class="portfolio">
-    <h1 class="content-subhead">Portfólio (Em breve)</h1>
+    <h1 class="content-subhead">Portfólio</h1>
     
     <div class="pure-g-r">
         <div class="pure-u-1-2">
