--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@ title: Luís Dalmolin
         
     <p>Sou um desenvolvedor web full stack, atualmente trabalhando na <a href="http://www.escape.ppg.br">Escape</a>, uma agência de comunicação.</p>
     <p>Confira alguns dos meus <a href="/projetos">projetos</a> e alguns dos trabalhos que já fiz no meu <a href="/portfolio">portfólio</a>.</p>
+
+    <br><br>
+
+    <p>Caso queira entrar em contato comigo, mande um email para <a href="mailto:luis.nh@gmail.com">luis.nh@gmail.com</a>.</p>
 </section>
