Alterando o layout do site

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 title: Luís Dalmolin
 ---
 
-<section id="home">
+<section class="container">
     <h1 class="content-subhead">Luís Dalmolin</h1>
-        
+
     <p>Sou um desenvolvedor web full stack, atualmente trabalhando na <a href="http://www.escape.ppg.br">Escape</a>, uma agência de comunicação.</p>
     <p>Confira alguns dos meus <a href="/projetos">projetos</a> e alguns dos trabalhos que já fiz no meu <a href="/portfolio">portfólio</a>.</p>
 
