Trabalhando na pagina de portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,8 +14,16 @@ title: Portfólio | Luís Dalmolin
     </div>
 
     <ul class="medias-list">
-        <li class="medias-list-item" style="background-color: blue">
+        <li class="medias-list-item">
+            <h3 class="medias-list-item-title">Mundo dos Cavalos</h3>
 
+            <p class="medias-list-item-description">Desenvolvimento (Back-end + Front-end).</p>
+
+            <div class="medias-list-item-link">
+                <a href="http://www.mundodoscavalos.com.br" class="btn">Acesso o site &gt;</a>
+            </div>
+
+            <img src="/assets/images/portfolio/mundo-dos-cavalos.jpg" alt="Mundo dos Cavalos">
         </li>
 
         <li class="medias-list-item" style="background-color: green">
