Finalizada alteracao inicial do layout do site

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@ title: Luís Dalmolin
 ---
 
 <section class="container">
-    <h1 class="content-subhead">Luís Dalmolin</h1>
+    <h1 class="content-title">Luís Dalmolin</h1>
 
-    <p>Sou um desenvolvedor web full stack, atualmente trabalhando na <a href="http://www.escape.ppg.br">Escape</a>, uma agência de comunicação.</p>
-    <p>Confira alguns dos meus <a href="/projetos">projetos</a> e alguns dos trabalhos que já fiz no meu <a href="/portfolio">portfólio</a>.</p>
+    <div class="content-text">
+        <p>Sou um desenvolvedor web full stack, atualmente trabalhando na <a href="http://www.escape.ppg.br">Escape</a>, uma agência de comunicação.</p>
+        <p>Confira alguns dos meus <a href="/projetos">projetos</a> e alguns dos trabalhos que já fiz no meu <a href="/portfolio">portfólio</a>.</p>
 
-    <br><br>
+        <br>
 
-    <p>Caso queira entrar em contato comigo, mande um email para <a href="mailto:luis.nh@gmail.com">luis.nh@gmail.com</a>.</p>
+        <p>Caso queira entrar em contato comigo, mande um email para <a href="mailto:luis.nh@gmail.com">luis.nh@gmail.com</a>.</p>
+    </div>
 </section>
