--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,148 +14,174 @@ title: Portfólio | Luís Dalmolin
     </div>
 
     <ul class="medias-list">
-        <li class="medias-list-item">
+        <li class="medias-list-item first">
             <h3 class="medias-list-item-title">Agência Escape</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <img src="/assets/images/portfolio/escape.jpg" alt="Escape">
 
-            <div class="medias-list-item-link">
-                <a href="http://www.escape.ppg.br.com.br" class="btn">Acesso o site &gt;</a>
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+
+                <div class="medias-list-item-link">
+                    <a href="http://www.escape.ppg.br.com.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
             </div>
-
-            <img src="/assets/images/portfolio/escape.jpg" alt="Escape">
         </li>
 
         <li class="medias-list-item">
             <h3 class="medias-list-item-title">Mundo dos Cavalos</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <img src="/assets/images/portfolio/mundo-dos-cavalos.jpg" alt="Mundo dos Cavalos">
 
-            <div class="medias-list-item-link">
-                <a href="http://www.mundodoscavalos.com.br" class="btn">Acesso o site &gt;</a>
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+
+                <div class="medias-list-item-link">
+                    <a href="http://www.mundodoscavalos.com.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
             </div>
-
-            <img src="/assets/images/portfolio/mundo-dos-cavalos.jpg" alt="Mundo dos Cavalos">
         </li>
 
-        <li class="medias-list-item">
+        <li class="medias-list-item last">
             <h3 class="medias-list-item-title">ACI/NH</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Framework próprio) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <img src="/assets/images/portfolio/aci.jpg" alt="ACI">
 
-            <div class="medias-list-item-link">
-                <a href="http://www.acinh.com.br" class="btn">Acesso o site &gt;</a>
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Framework próprio) + Front-end.</p>
+
+                <div class="medias-list-item-link">
+                    <a href="http://www.acinh.com.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
             </div>
-
-            <img src="/assets/images/portfolio/aci.jpg" alt="ACI">
         </li>
 
-        <li class="medias-list-item">
+        <li class="clearfix"></li>
+
+        <li class="medias-list-item first">
             <h3 class="medias-list-item-title">Prosec Segurança</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.prosecseguranca.rs" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.prosecseguranca.rs" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/prosec.jpg" alt="Prosec Segurança">
             </div>
-
-            <img src="/assets/images/portfolio/prosec.jpg" alt="Prosec Segurança">
         </li>
 
         <li class="medias-list-item">
             <h3 class="medias-list-item-title">Assintecal</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://ww3.assintecal.org.br" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://ww3.assintecal.org.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/assintecal.jpg" alt="Assintecal">
             </div>
-
-            <img src="/assets/images/portfolio/assintecal.jpg" alt="Assintecal">
         </li>
 
-        <li class="medias-list-item">
+        <li class="medias-list-item last">
             <h3 class="medias-list-item-title">Prêmio Primus</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.premioprimus.org.br" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.premioprimus.org.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/premio-primus.jpg" alt="Prêmio Primus">
             </div>
-
-            <img src="/assets/images/portfolio/premio-primus.jpg" alt="Prêmio Primus">
         </li>
 
-        <li class="medias-list-item">
+        <li class="medias-list-item first">
             <h3 class="medias-list-item-title">Resyarte</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.resyarte.com.br" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.resyarte.com.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/resyarte.jpg" alt="Resyarte">
             </div>
-
-            <img src="/assets/images/portfolio/resyarte.jpg" alt="Resyarte">
         </li>
 
         <li class="medias-list-item">
             <h3 class="medias-list-item-title">Sportland</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.sportland.com.br" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.sportland.com.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/sportland.jpg" alt="Sportland">
             </div>
-
-            <img src="/assets/images/portfolio/sportland.jpg" alt="Sportland">
         </li>
 
-        <li class="medias-list-item">
+        <li class="medias-list-item last">
             <h3 class="medias-list-item-title">Brasil By Bags</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.brasilbybags.com" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.brasilbybags.com" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/brasil-by-bags.jpg" alt="Brasil By Bags">
             </div>
-
-            <img src="/assets/images/portfolio/brasil-by-bags.jpg" alt="Brasil By Bags">
         </li>
 
-        <li class="medias-list-item">
+        <li class="medias-list-item first">
             <h3 class="medias-list-item-title">Millenium</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.milleniumtec.com" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.milleniumtec.com" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/millenium.jpg" alt="Millenium">
             </div>
-
-            <img src="/assets/images/portfolio/millenium.jpg" alt="Millenium">
         </li>
 
         <li class="medias-list-item">
             <h3 class="medias-list-item-title">Viajar Gramado</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.viajargramado.com.br" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.viajargramado.com.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/viajar-gramado.jpg" alt="Viajar Gramado">
             </div>
-
-            <img src="/assets/images/portfolio/viajar-gramado.jpg" alt="Viajar Gramado">
         </li>
 
         <li class="medias-list-item">
             <h3 class="medias-list-item-title">Lojas Linna</h3>
 
-            <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
+            <div class="medias-list-item-content">
+                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
 
-            <div class="medias-list-item-link">
-                <a href="http://www.lojaslinna.com.br" class="btn">Acesso o site &gt;</a>
+                <div class="medias-list-item-link">
+                    <a href="http://www.lojaslinna.com.br" class="btn btn-primary">Acesso o site &gt;</a>
+                </div>
+
+                <img src="/assets/images/portfolio/lojaslinna.jpg" alt="Lojas Linna">
             </div>
-
-            <img src="/assets/images/portfolio/lojaslinna.jpg" alt="Lojas Linna">
         </li>
     </ul>
 </section><!-- .portfolio -->
