Alterado layout do site

--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@ title: Luís Dalmolin
 ---
 
 <section class="container">
-    <h1 class="content-title">Luís Dalmolin</h1>
-
     <div class="content-text">
-        <p>Sou um desenvolvedor web full stack, atualmente trabalhando na <a href="http://www.escape.ppg.br">Escape</a>, uma agência de comunicação.</p>
+        <p>Desenvolvedor web full stack, atualmente trabalhando na <a href="http://www.escape.ppg.br">Agência Escape</a>. Trabalho com todo tipo de tecnologia web, mas princpalmente com PHP, utilizando o framework <a href="http://laravel.com" target="_blank">Laravel</a> e javascript, atualmente utilizando bastante o <a href="https://angularjs.org/" target="_blank">AngularJS</a>.</p>
         <p>Confira alguns dos meus <a href="/projetos">projetos</a> e alguns dos trabalhos que já fiz no meu <a href="/portfolio">portfólio</a>.</p>
-
-        <br>
-
-        <p>Caso queira entrar em contato comigo, mande um email para <a href="mailto:luis.nh@gmail.com">luis.nh@gmail.com</a>.</p>
     </div>
 </section>
