--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,180 +8,125 @@ title: Portfólio | Luís Dalmolin
 * Prosec (quando entrar no ar)
 * Killjob (quando lançar)
 -->
-<section class="content portfolio">
-    <div class="container">
-        <h1 class="content-title">Portfólio</h1>
-    </div>
+<section class="container portfolio">
+    <h1 class="content-title">Portfólio</h1>
 
-    <ul class="medias-list">
-        <li class="medias-list-item first">
-            <h3 class="medias-list-item-title">Agência Escape</h3>
+    <ul class="portfolio-list">
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/dco.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">DCO Consultoria</h3>
+                <p class="portfolio-list-text">Site da DCO Consultoria. Front-end + Back-end (Laravel).</p>
 
-            <div class="medias-list-item-content">
-                <img src="/assets/images/portfolio/escape.jpg" alt="Escape">
-
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.escape.ppg.br.com.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
+                <a href="http://www.dcoconsultoria.com.br" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item">
-            <h3 class="medias-list-item-title">Mundo dos Cavalos</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/escape.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Agência Escape</h3>
+                <p class="portfolio-list-text">Site da Agência Escape. Front-end + Back-end (Laravel).</p>
 
-            <div class="medias-list-item-content">
-                <img src="/assets/images/portfolio/mundo-dos-cavalos.jpg" alt="Mundo dos Cavalos">
-
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.mundodoscavalos.com.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
+                <a href="http://www.escape.ppg.br" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item last">
-            <h3 class="medias-list-item-title">ACI/NH</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/mundo-dos-cavalos.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Mundo dos Cavalos</h3>
+                <p class="portfolio-list-text">Loja virtual de produtos personalizados. Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <img src="/assets/images/portfolio/aci.jpg" alt="ACI">
-
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Framework próprio) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.acinh.com.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
+                <a href="https://www.mundodoscavalos.com.br" class="btn btn-secundary" target="_blank">Ver loja</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="clearfix"></li>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/aci.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">ACI/NH</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Framework próprio) + Front-end.</p>
 
-        <li class="medias-list-item first">
-            <h3 class="medias-list-item-title">Prosec Segurança</h3>
-
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.prosecseguranca.rs" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/prosec.jpg" alt="Prosec Segurança">
+                <a href="http://www.acinh.com.br" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item">
-            <h3 class="medias-list-item-title">Assintecal</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/prosec.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Prosec Segurança</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://ww3.assintecal.org.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/assintecal.jpg" alt="Assintecal">
+                <a href="http://www.prosecseguranca.rs" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item last">
-            <h3 class="medias-list-item-title">Prêmio Primus</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/assintecal.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Assintecal</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.premioprimus.org.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/premio-primus.jpg" alt="Prêmio Primus">
+                <a href="http://www.assintecal.com.br" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item first">
-            <h3 class="medias-list-item-title">Resyarte</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/premio-primus.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Prêmio Primus</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.resyarte.com.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/resyarte.jpg" alt="Resyarte">
+                <a href="http://www.premioprimus.org.br" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item">
-            <h3 class="medias-list-item-title">Sportland</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/resyarte.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Resyarte</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.sportland.com.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/sportland.jpg" alt="Sportland">
+                <a href="http://www.resyarte.com.br" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item last">
-            <h3 class="medias-list-item-title">Brasil By Bags</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/sportland.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Loja Virtual Sportland</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Framework Próprio) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end (Laravel) + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.brasilbybags.com" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/brasil-by-bags.jpg" alt="Brasil By Bags">
+                <a href="http://www.sportland.com.br" class="btn btn-secundary" target="_blank">Ver loja</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item first">
-            <h3 class="medias-list-item-title">Millenium</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/brasil-by-bags.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Brasil By Bags</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Laravel) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.milleniumtec.com" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/millenium.jpg" alt="Millenium">
+                <a href="http://www.brasilbybags.com" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item">
-            <h3 class="medias-list-item-title">Viajar Gramado</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/millenium.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Millenium</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Framework Próprio) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.viajargramado.com.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/viajar-gramado.jpg" alt="Viajar Gramado">
+                <a href="http://www.milleniumtec.com" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
+        </li><!-- .portfolio-list-item -->
 
-        <li class="medias-list-item">
-            <h3 class="medias-list-item-title">Lojas Linna</h3>
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/viajar-gramado.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Viajar Gramado</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Framework Próprio) + Front-end.</p>
 
-            <div class="medias-list-item-content">
-                <p class="medias-list-item-description">Desenvolvimento Back-end + Front-end.</p>
-
-                <div class="medias-list-item-link">
-                    <a href="http://www.lojaslinna.com.br" class="btn btn-primary">Acesso o site &gt;</a>
-                </div>
-
-                <img src="/assets/images/portfolio/lojaslinna.jpg" alt="Lojas Linna">
+                <a href="http://www.viajargramado.com.br" class="btn btn-secundary" target="_blank">Ver site</a>
             </div>
-        </li>
-    </ul>
+        </li><!-- .portfolio-list-item -->
+
+        <li class="portfolio-list-item" style="background-image: url(/assets/images/portfolio/lojaslinna.jpg)">
+            <div class="portfolio-list-overlay">
+                <h3 class="portfolio-list-title">Lojas Linna</h3>
+                <p class="portfolio-list-text">Desenvolvimento Back-end (Framework Próprio) + Front-end.</p>
+
+                <a href="http://www.lojaslinna.com.br" class="btn btn-secundary" target="_blank">Ver site</a>
+            </div>
+        </li><!-- .portfolio-list-item -->
+    </ul><!-- .portfolio-list -->
 </section><!-- .portfolio -->
