Removido site, adicionada pagina simples

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
----
-layout: default
-title: Luís Dalmolin
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Luís Dalmolin</title>
 
-<section class="container">
-    <div class="content-text">
-        <p>Desenvolvedor web full stack, atualmente trabalhando na <a href="http://www.escape.ppg.br">Agência Escape</a>. Trabalho com todo tipo de tecnologia web, mas princpalmente com PHP, utilizando o framework <a href="http://laravel.com" target="_blank">Laravel</a> e javascript, atualmente utilizando bastante o <a href="https://angularjs.org/" target="_blank">AngularJS</a>.</p>
-        <p>Confira alguns dos meus <a href="/projetos">projetos</a> e alguns dos trabalhos que já fiz no meu <a href="/portfolio">portfólio</a>.</p>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Luís Dalmolin</h1>
+        <h2>Full Stack Developer</h2>
+
+        <img src="assets/img/profile.jpg" alt="" class="profile-img">
+
+        <div class="social">
+            <a target="_blank" href="https://github.com/luisdalmolin" class="social-item"><img src="assets/img/github.svg" alt=""></a>
+            <a target="_blank" href="https://br.linkedin.com/in/luisdalmolin" class="social-item"><img src="assets/img/linkedin.svg" alt=""></a>
+            <a target="_blank" href="https://twitter.com/luisdalmolin" class="social-item"><img src="assets/img/twitter.svg" alt=""></a>
+            <a target="_blank" href="https://facebook.com/luisdalmolin" class="social-item"><img src="assets/img/facebook.svg" alt=""></a>
+            <a href="mailto:luis.nh@gmail.com" class="social-item"><img src="assets/img/email.svg" alt=""></a>
+        </div>
     </div>
-</section>
+</body>
+</html>
